--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ h2 {
     font-size: 16px;
     padding: 2% 2%;
     border: none;
+    border-radius: none;
 }
 
 .item:focus {
@@ -81,7 +82,7 @@ h2 {
     color: white;
     font-size: 18px;
     padding: 4% 20%;
-    margin: 2% 6%;
+    margin: 4% 6%;
   
 
 }
