Add favicon and correct clear day action

--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ h1 {
     font-family: "Libre Caslon Text", serif;
     font-weight: 400;
     font-size: 20px;
-    margin-top: 10px;
+    margin-top: 4%;
     padding-top: 15%;
     
         
