--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 html, body {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
     background: linear-gradient(#00afb9, #fed9b7ff);
     background-repeat: no-repeat;
+    background: cover;
     text-align: center;
     margin: 0;
     color: #013747;
