--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 html, body {
-    height: 100vh;
+    width: 100vw;
+    min-height: 100vh;
+    background: linear-gradient(#00afb9, #fed9b7ff);
+    background-repeat: no-repeat;
 }
 
 body {
-    background: linear-gradient(#00afb9, #fed9b7ff);
-    background-repeat: no-repeat;
-    background: cover;
     text-align: center;
     margin: 0;
     color: #013747;
@@ -18,7 +18,7 @@ h1 {
     font-family: "Libre Caslon Text", serif;
     font-weight: 400;
     font-size: 20px;
-    margin-top: 4%;
+    margin-top: 2%;
     padding-top: 15%;
     
         
@@ -83,7 +83,7 @@ h2 {
     color: white;
     font-size: 18px;
     padding: 4% 20%;
-    margin: 2% 6%;
+    margin: 5% 6% 8% 6%;
   
 
 }
